# gps-logger-parser

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  test.yml
data/dependabot/uv/urllib3-2.7.0/: coverage.xml
data/harmonization/: coverage.xml
data/improvements/: coverage.xml
data/main/: coverage.xml
data/speed-harmonization/: coverage.xml
docs/: index.md
scripts/: benchmark_compare.py
src/gps_logger_parser/: __init__.py  cli.py  helpers.py  parser.py  parser_base.py  parser_excel.py
src/gps_logger_parser/accelerometer/: __init__.py  columns.py  mixin.py
src/gps_logger_parser/gps/: __init__.py  axytrek.py  base.py  catlog.py  columns.py  ecotone.py  gpx.py  ho11.py  igotu.py  interrex.py  jm.py  mataki.py  mixin.py  ornitela.py  pathtrack.py  unknown.py
src/gps_logger_parser/other_sensor/: columns.py  interrex.py  mixin.py
src/gps_logger_parser/tdr/: __init__.py  columns.py  mixin.py
src/gps_logger_parser/tests/: test_benchmark.py  test_parsers.py
tests/: config.yaml
tests/files/: 020719_BK_An_6199165_CC6_GPS.csv  10_raw_csv_format.txt  150717_BK_AN_6199514_GPS11.csv  1d0000021e.65509.-EnvironmentData-Environment.csv  1d00000229.65520.-LocationData-Interrex_gpslogger.csv  20150715-6126271-OSS.csv  20160619-6223861-KRY.csv  20160710-6217930-OBS.csv  20160710-6228801-OBS.csv  20170622-102857.gpx  20170622-215451.gpx  20170622-215608.gpx  232772_20231115_12030_Ornitela_gpslogger.csv  41422_all_data.pos  7AD_Tag42853_merged.csv  7EH_Tag42877_merged.csv  A15153_08-06-2018.csv  A15153_20-10-2021.csv  Alkefjellet_11307_010720_corrupt.csv  An11_YL.txt  An12_PC.txt  An12_PJ.txt  BLK_An_189_01_120704.TXT  BLK_An_215_03_120716.TXT  BRGU 4215328 AXY-29 04072018_S2.csv  BRGU AXY06 15062018_S3.csv  CG_DI_A08918_02-07-12.CSV  ES-SK-F-19011-295827-20200702-X27_Acc.txt  ES-SK-F-19015-295738-20210630-X23_Acc.txt  ES-SK-M-A12258-20160708-2001407-x31-small.CSV  ES_RU_292616_TDR_red.csv  G199_120708.TXT  Ho11_EM(csv version).csv  J150H_243391_20250210_131300.csv  J2710_242854_20250210_101400.csv  Obs250823_130741_Tag47649Press.txt  Røst_EUSH_2004866_NJ_GPS42941_2022.pos  Tag41485_combined.pos  putty_20130705_base115_2.log_106_GPS.csv
