
[project]
authors = [
  {name = "ninanor", email = "ninanor@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "chardet>=5.2.0",
  "django-environ",
  "gpxpy>=1.6.2",
  "pandas>=2.3.3",
  "pyarrow>=23.0.0",
  "structlog>=25.5.0",
  "typer>=0.23.1",
]
description = ""
license = "MIT"
name = "gps_logger_parser"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]
gps-logger-parser = "gps_logger_parser.cli:app"

[dependency-groups]
dev = [
  "deptry",
  "pytest>=9.0.2",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocs-typer2>=0.1.6",
  "ty>=0.0.3"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"


[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
